--- a/feline/templates/jobposts/jobpost_form.html
+++ b/feline/templates/jobposts/jobpost_form.html
@@ -2,9 +2,83 @@
 {% load static i18n %}
 
 {% block content %}
+
 <form action="{% url 'create' %}" method="post">
+    {{ form.non_field_errors }}
+    {{ form.media }}
     {% csrf_token %}
-    {{ form.as_p }}
+
+    <div class="fieldWrapper">
+        {{ form.company.errors }}
+        <label for="{{ form.company.id_for_label }}">Compañia</label>
+        {{ form.company }}
+    </div>
+    <div class="fieldWrapper">
+        {{ form.title.errors }}
+        <label for="{{ form.title.id_for_label }}">Posición</label>
+        {{ form.title }}
+    </div>
+    <div class="fieldWrapper">
+        {{ form.job_type.errors }}
+        <label for="{{ form.job_type.id_for_label }}">Tipo de trabajo</label>
+        {{ form.job_type }}
+    </div>
+
+    <div class="fieldWrapper">
+        {{ form.category.errors }}
+        <label for="{{ form.category.id_for_label }}">Categoria</label>
+        {{ form.category }}
+    </div>
+
+    <div class="fieldWrapper">
+        {{ form.description.errors }}
+        <label for="{{ form.description.id_for_label }}">Descripción</label>
+        {{ form.description }}
+    </div>
+    <div class="fieldWrapper">
+        {{ form.how_to_apply.errors }}
+        <label for="{{ form.how_to_apply.id_for_label }}">Como aplicar</label>
+        {{ form.how_to_apply }}
+    </div>
+
+    <div class="fieldWrapper">
+        {{ form.location.errors }}
+        <label for="{{ form.location.id_for_label }}">Localidad</label>
+        {{ form.location }}
+    </div>
+    <div class="fieldWrapper">
+        {{ form.application_url.errors }}
+        <label for="{{ form.application_url.id_for_label }}">URL para aplicar:</label>
+        {{ form.application_url }}
+    </div>
+    <div class="fieldWrapper">
+        {{ form.application_email.errors }}
+        <label for="{{ form.application_email.id_for_label }}">Email de la aplicación:</label>
+        {{ form.application_email }}
+    </div>
+    <div class="fieldWrapper">
+        {{ form.tags.errors }}
+        <label for="{{ form.tags.id_for_label }}">Tags</label>
+        {{ form.tags }}
+    </div>
+    <div class="fieldWrapper">
+        {{ form.currency.errors }}
+        <label for="{{ form.currency.id_for_label }}">Moneda</label>
+        {{ form.currency }}
+        {{ form.salary_range_start_at.errors }}
+        <label for="{{ form.salary_range_start_at.id_for_label }}">Salario comienza en:</label>
+        {{ form.salary_range_start_at }}
+
+        {{ form.salary_range_end_at.errors }}
+        <label for="{{ form.salary_range_end_at.id_for_label }}">Salario termina en:</label>
+        {{ form.salary_range_end_at }}
+    </div>
+    <div class="fieldWrapper">
+        {{ form.sponsor_relocation.errors }}
+        <label for="{{ form.sponsor_relocation.id_for_label }}">Patrocina Relocación</label>
+        {{ form.sponsor_relocation }}
+    </div>
+
     <input type="submit" value="Crear Anuncio">
 </form>
 {% endblock content %}
