--- a/feline/templates/jobposts/jobpost_list.html
+++ b/feline/templates/jobposts/jobpost_list.html
@@ -4,7 +4,14 @@
 {% block content %}
 
 {% for jobpost in object_list %}
-    <li>Hello world</li>
+    <div class="py-6 px-4 rounded-lg border mb-2 flex">
+        <img  class="w-16 mr-6" src="{{ jobpost.company.logo.url}}">
+        <div>
+            <h3 class="text-xl"><a href="{{ jobpost.get_absolute_url }}">{{ jobpost.title }}</a></h3>
+            <p class="text-sm">{{ jobpost.company }} - {{ jobpost.location.name }}</p>
+        </div>
+
+    </div>
 
 {% empty %}
     <p>They are no jobs available</p>
