Introduce forms and Facebook configuration

--- a/feline/templates/base.html
+++ b/feline/templates/base.html
@@ -36,7 +36,8 @@
   </head>
 
   <body>
-
+    {% block notification_bar %}
+    {% endblock notification_bar %}
     <div class="" style="background-color: #1D4ED8; color: white;">
       <nav class="invisible sm:visible flex justify-between py-8 mb-12 container mx-auto">
         <a class="" href="{% url 'home' %}">feline</a>
