--- a/feline/templates/jobposts/company_form.html
+++ b/feline/templates/jobposts/company_form.html
@@ -3,6 +3,10 @@
 
 {% block content %}
 
+{% if request.user.set_company.all == 0 %}
+    Aqui va notificación crear compania es necesario
+{% endif %}
+
 <form action="{% url 'company-create' %}" method="post">
     {% csrf_token %}
     {{ form.non_field_errors }}
