--- a/feline/templates/account/base.html
+++ b/feline/templates/account/base.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="row">
-  <div class="col-md-6 offset-md-3">
+  <div class="py-8 px-8 mx-auto max-w-md center" style="background-color: white;">
     {% block inner %}{% endblock %}
   </div>
 </div>
