--- a/feline/templates/account/login.html
+++ b/feline/templates/account/login.html
@@ -6,42 +6,58 @@
 
 {% block head_title %}{% translate "Sign In" %}{% endblock %}
 
+
 {% block inner %}
 
-<h1>{% translate "Sign In" %}</h1>
+
 
 {% get_providers as socialaccount_providers %}
 
 {% if socialaccount_providers %}
-<p>{% blocktranslate with site.name as site_name %}Please sign in with one
-of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-for a {{ site_name }} account and sign in below:{% endblocktranslate %}</p>
+<!-- <p>{% blocktranslate with site.name as site_name %}Por favor inicia  con una cuenta de un proveedor existente
+ o  <a href="{{ signup_url }}">Registrate</a>
+for a {{ site_name }} account and sign in below:{% endblocktranslate %}</p> -->
+<div class="mx-12">
+  <div class="socialaccount_ballot">
+    <h1 class="text-2xl text-center">{% translate "Iniciar Sesión" %}</h1>
 
-<div class="socialaccount_ballot">
+    <div class="block">
+      {% include "socialaccount/snippets/provider_list.html" with process="login" %}
+    </div>
 
-  <ul class="socialaccount_providers">
-    {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-  </ul>
+    <div class="text-center">{% translate 'o' %}</div>
 
-  <div class="login-or">{% translate 'or' %}</div>
+  </div>
 
-</div>
+  {% include "socialaccount/snippets/login_extra.html" %}
 
-{% include "socialaccount/snippets/login_extra.html" %}
-
-{% else %}
-<p>{% blocktranslate %}If you have not created an account yet, then please
-<a href="{{ signup_url }}">sign up</a> first.{% endblocktranslate %}</p>
-{% endif %}
-
-<form class="login" method="POST" action="{% url 'account_login' %}">
-  {% csrf_token %}
-  {{ form|crispy }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+  {% else %}
+  <p>{% blocktranslate %}Si no has creado tu cuenta aun, entonces por favor
+  <a href="{{ signup_url }}">registrate</a> first.{% endblocktranslate %}</p>
   {% endif %}
-  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% translate "Forgot Password?" %}</a>
-  <button class="primaryAction btn btn-primary" type="submit">{% translate "Sign In" %}</button>
-</form>
 
+  <form class="login" method="POST" action="{% url 'account_login' %}">
+    {% csrf_token %}
+    {{ form.non_field_errors }}
+
+    <div class="fieldWrapper">
+      {{ form.login.errors }}
+      <label for="{{ form.login.id_for_label }}">Nombre de Usuario</label>
+      {{ form.login }}
+    </div>
+    <div class="fieldWrapper">
+      {{ form.password.errors }}
+      <label for="{{ form.password.id_for_label }}">Password</label>
+      {{ form.password }}
+    </div> <br/>
+
+    {% if redirect_field_value %}
+    <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+    {% endif %}
+    <div class="fieldWrapper"> {{ form.remember }}
+      <a class="inline" href="{% url 'account_reset_password' %}">{% translate "olvidaste tu contraseña?" %}</a>
+    </div><br/>
+    <button  style="background-color: #F78C2C; color: white;" class="py-2 px-4 rounded" type="submit">{% translate "Inicia Sesión" %}</button>
+  </form>
+</div>
 {% endblock %}
