--- a/feline/templates/account/signup.html
+++ b/feline/templates/account/signup.html
@@ -6,7 +6,7 @@
 {% block head_title %}{% translate "Signup" %}{% endblock %}
 
 {% block inner %}
-<h1>{% translate "Sign Up" %}</h1>
+<h1 class="text-2xl text-center">{% translate "Registrate" %}</h1>
 
 <p>{% blocktranslate %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktranslate %}</p>
 
@@ -16,7 +16,8 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <button class="btn btn-primary" type="submit">{% translate "Sign Up" %} &raquo;</button>
+  <br/>
+  <button  style="background-color: #F78C2C; color: white;" class="py-2 px-4 rounded" type="submit">{% translate "Registrarse" %} &raquo;</button>
 </form>
 
 {% endblock %}
