--- a/feline/templates/base.html
+++ b/feline/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>{% block title %}feline{% endblock title %}</title>
+    <title>{% block title %}HiEmpleos{% endblock title %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="a agile and fast alternative to emplea.do">
     <meta name="author" content="Leonardo Jimenez">
@@ -35,38 +35,41 @@
 
   </head>
 
-  <body>
+  <body style="background-color: #F2F4F7;">
     {% block notification_bar %}
     {% endblock notification_bar %}
-    <div class="" style="background-color: #1D4ED8; color: white;">
-      <nav class="invisible sm:visible flex justify-between py-8 mb-12 container mx-auto">
-        <a class="" href="{% url 'home' %}">feline</a>
+    <div class="" style="background-color: #fff;">
+      <nav class="invisible sm:visible flex justify-between py-4 mb-12 container mx-auto">
+        <a class="" href="{% url 'home' %}"><img class="h-8" src="{% static 'images/website-logo.svg' %}"></a>
 
         <div class="" id="navbarSupportedContent">
           <ul class="flex">
             <li class="active">
-              <a class="nav-link" href="{% url 'home' %}">Empleos <span class="sr-only">(current)</span></a>
+              <a class="gray-900 font-bold" href="{% url 'home' %}">Empleos <span class="sr-only">(current)</span></a>
             </li>
             <li class="ml-12">
-              <a class="nav-link" href="{% url 'about' %}">About</a>
+              <a class="gray-900 font-bold" href="{% url 'about' %}">About</a>
             </li>
             {% if request.user.is_authenticated %}
               <li class="ml-12">
                 {# URL provided by django-allauth/account/urls.py #}
-                <a class="nav-link" href="{% url 'users:detail' request.user.username  %}">Perfil</a>
+                <a class="gray-900 font-bold" href="{% url 'users:detail' request.user.username  %}">Perfil</a>
               </li>
               <li class="ml-12">
                 {# URL provided by django-allauth/account/urls.py #}
-                <a class="nav-link" href="{% url 'account_logout' %}">Salir</a>
-              </li>
-            {% else %}
-              <li class="ml-12">
-                {# URL provided by django-allauth/account/urls.py #}
-                <a id="sign-up-link" class="nav-link" href="{% url 'account_signup' %}">Registrate</a>
+                <a class="gray-900 font-bold" href="{% url 'account_logout' %}">Salir</a>
               </li>
               <li class="ml-12">
+                <a class="gray-900 font-bold" href="{% url 'create' %}">Nueva Posición</a>
+              </li>
+            {% else %}    
+              <li class="ml-12">
                 {# URL provided by django-allauth/account/urls.py #}
-                <a id="log-in-link" class="nav-link" href="{% url 'account_login' %}">Iniciar Sesión</a>
+                <a id="log-in-link" style="background-color: #F5CBA5" class="gray-900 py-2 px-4 rounded font-bold" href="{% url 'account_login' %}">Iniciar Sesión</a>
+              </li>
+              <li class="ml-12">
+                {# URL provided by django-allauth/account/urls.py #}
+                <a id="sign-up-link" style="background-color: #F78C2C; color: white;" class="py-2 px-4 rounded" href="{% url 'account_signup' %}">Registrate</a>
               </li>
             {% endif %}
           </ul>
