--- a/feline/templates/jobposts/jobpost_detail.html
+++ b/feline/templates/jobposts/jobpost_detail.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% load static i18n l10n %}
 
+{% block title %} Hiempleos.com - {{ object.title }} {% endblock title %}
 
 {% block notification_bar %}
 {% if object.company.user == request.user %}
@@ -17,39 +18,50 @@
 
 
 {% block content %}
+<div class="flex flex-col md:flex-row justify-start">
+    <div class="w-full md:w-2/3 py-6 px-4" style="background-color: white;">
+        <div class="flex justify-start pb-6 border-b border-b-gray-300">
+            <img class="w-16 h-16 rounded-sm border-solid border-gray-200 border6" src="{{ object.company.logo.url }}">
 
-<div class="flex justify-start">
-    <img class="max-w-16" src="{{ object.company.logo.url }}">
+            <div class="ml-4">
+                <a href="{{ object.company.get_absolute_url }}" class="text-2xl font-bold" style="color: #414141;">{{ object.company }}</a>
+                {% if object.tagline %}<h2 class="text-sm font-light my-2">{{ object.tagline }}</h2> {% endif %}
 
-    <div class="ml-12">
-        <h1 class="text-3xl">{{ object.title }}</h1>
-        <h2 class="text-base font-light my-2">{{ object.company }}</h2>
+                 
+            </div>
+        </div>
 
-        <div class="flex">
-        {% if not object.is_remote %} 
-            <div class="border rounded-md font-light px-2 py-0.5 uppercase text-sm my-2">remoto</div> {% endif %} 
-            <div class="border rounded-md font-light px-2 py-0.5 ml-3 uppercase text-sm my-2">{{ object.job_type }}</div>
-        </div>    
+        <div class="mt-8 mb-1">
+            <div>
+                {{ object.description | safe }}
+            </div>
+            <div class="flex">
+                {% if not object.is_remote %} 
+                    <div class="border rounded-md font-light px-2 py-0.5 uppercase text-sm my-2">remoto</div> 
+                {% endif %} 
+                <div class="border rounded-md font-light px-2 py-0.5 ml-3 uppercase text-sm my-2">{{ object.job_type }}</div>
+            </div>   
+            <div class="w-3/5 mr-8">
+                <h3 class="text-lg font-bold">Salario</h3>
+                {{ object.get_salary_range }}
+
+                <h3 class="mt-8 mb-1 text-lg font-bold">Detalles del Trabajo</h3>
+                
+                
+                
+                <h3 class="mt-8 mb-1 text-lg font-bold">Como aplicar</h3>
+                
+                {{ object.how_to_apply | safe }}
+                
+            </div>
+            <div class="w-2/5 border rounded-md ">
+
+            </div>
+        </div>
     </div>
-</div>
-
-<div class="flex mt-8 mb-1">
-    <div class="w-3/5 mr-8">
-        <h3 class="text-lg font-bold">Salario</h3>
-        {{ object.get_salary_range }}
-
-        <h3 class="mt-8 mb-1 text-lg font-bold">Detalles del Trabajo</h3>
-        
-        {{ object.description | safe }}
-        
-        <h3 class="mt-8 mb-1 text-lg font-bold">Como aplicar</h3>
-        
-        {{ object.how_to_apply | safe }}
-        
+    <div class="md:w-1/3 ml-4 py-6 px-4" style="background-color: white;">
+        sidebar content
     </div>
-    <div class="w-2/5 border rounded-md ">
-
-    </div>
-</div>
+</di>
 
 {% endblock content %}
