--- a/feline/templates/jobposts/jobpost_list.html
+++ b/feline/templates/jobposts/jobpost_list.html
@@ -4,8 +4,8 @@
 {% block content %}
 
 {% for jobpost in object_list %}
-    <div class="py-6 px-4 rounded-lg border mb-2 flex">
-        <img  class="w-16 mr-6" src="{{ jobpost.company.logo.url}}">
+    <div class="py-6 px-4 rounded-lg border mb-2 flex" style="background-color: white;">
+        <img  class="w-16 mr-6 rounded-sm border-solid border-gray-200 border6" src="{{ jobpost.company.logo.url}}">
         <div>
             <h3 class="text-xl"><a href="{{ jobpost.get_absolute_url }}">{{ jobpost.title }}</a></h3>
             <p class="text-sm">{{ jobpost.company }} - {{ jobpost.location.name }}</p>
