Add jobpost and company views

--- a/feline/static/sass/project.scss
+++ b/feline/static/sass/project.scss
@@ -2,6 +2,7 @@ body {
   font-family: soleil, sans-serif;
   font-weight: 400;
   font-style: normal;
+  font-size: 16px;
 }
 
 // project specific CSS goes here
@@ -94,3 +95,28 @@ form {
   background-color: #1A76F2;
   color: white;
 }
+
+
+// Off Canvas Menu related code
+
+// .nav {
+//   margin-top: 6vmax;
+// }
+
+// .nav a {
+//   display: block;
+//   margin: 0;
+//   padding: 0.5vmax 3vmax;
+//   color: var(--menuTextColor);
+//   text-decoration: none;
+// }
+
+// .nav a:hover {
+//   background-color: #102A43;
+// }
+
+// .nav a:hover,
+// .nav a:focus,
+// .nav a:active {
+//   color: var(--menuTextHoverColor);
+// }
