--- a/feline/static/css/project.css
+++ b/feline/static/css/project.css
@@ -1,7 +1,8 @@
 body {
   font-family: soleil, sans-serif;
   font-weight: 400;
-  font-style: normal; }
+  font-style: normal;
+  font-size: 16px; }
 
 .alert-debug {
   background-color: #fff;
