--- a/feline/templates/account/login.html
+++ b/feline/templates/account/login.html
@@ -20,14 +20,16 @@ for a {{ site_name }} account and sign in below:{% endblocktranslate %}</p> -->
 <div class="mx-12">
   <div class="socialaccount_ballot">
     <h1 class="text-2xl text-center">{% translate "Iniciar Sesión" %}</h1>
-
+    {% comment %}
     <div class="block">
       {% include "socialaccount/snippets/provider_list.html" with process="login" %}
     </div>
+    
 
     <div class="text-center">{% translate 'o' %}</div>
-
+    {% endcomment %}
   </div>
+  
 
   {% include "socialaccount/snippets/login_extra.html" %}
 
