--- a/feline/templates/jobposts/jobpost_detail.html
+++ b/feline/templates/jobposts/jobpost_detail.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load static i18n l10n %}
+{% load static i18n l10n humanize %}
 
 {% block title %} Hiempleos.com - {{ object.title }} {% endblock title %}
 
@@ -18,49 +18,80 @@
 
 
 {% block content %}
-<div class="flex flex-col md:flex-row justify-start">
-    <div class="w-full md:w-2/3 py-6 px-4" style="background-color: white;">
+<div class="flex flex-col sm:mx md:flex-row justify-start">
+    <div class="w-full -auto md:w-2/3 py-6 px-4 mb-4" style="background-color: white;">
         <div class="flex justify-start pb-6 border-b border-b-gray-300">
             <img class="w-16 h-16 rounded-sm border-solid border-gray-200 border6" src="{{ object.company.logo.url }}">
 
             <div class="ml-4">
                 <a href="{{ object.company.get_absolute_url }}" class="text-2xl font-bold" style="color: #414141;">{{ object.company }}</a>
-                {% if object.tagline %}<h2 class="text-sm font-light my-2">{{ object.tagline }}</h2> {% endif %}
-
-                 
+                {% if object.company.tagline %}<h2 class="text-sm font-light my-2">{{ object.company.tagline }}</h2> {% endif %}                 
             </div>
         </div>
 
-        <div class="mt-8 mb-1">
-            <div>
-                {{ object.description | safe }}
-            </div>
-            <div class="flex">
-                {% if not object.is_remote %} 
-                    <div class="border rounded-md font-light px-2 py-0.5 uppercase text-sm my-2">remoto</div> 
+        <div class="mt-8 mb-8">
+            {% if object.has_application_url %}
+                <a class="sm:float-right font-bold text-sm flex py-2 px-4 rounded" style="color: white; background-color: #F78C2C;" href="{{ object.get_application_url }}">Aplicar &nbsp;	&nbsp; <img class="relative -top-0.5 w-4" src="{% static 'images/icons/export.svg' %}">
+                </a>
+            {% endif %}
+            <h2 class="text-3xl font-bold" style="color: #414141;">{{ object.title }}</h2>
+            <div class="flex sm:flex-column md:flex-row flex-wrap">
+                <div class="font-light px-3 py-2 text-sm my-2 mr-3 w-max" style="background-color: #F6F7F9;">{{ object.job_type }}</div>
+
+                {% if object.is_remote %} 
+                <div class="font-light px-3 py-2 text-sm my-2 mx-3 w-max" style="background-color: #F6F7F9;">Remoto</div>
                 {% endif %} 
-                <div class="border rounded-md font-light px-2 py-0.5 ml-3 uppercase text-sm my-2">{{ object.job_type }}</div>
-            </div>   
-            <div class="w-3/5 mr-8">
-                <h3 class="text-lg font-bold">Salario</h3>
-                {{ object.get_salary_range }}
+                
+            
+                {% if object.get_salary_range != 'No disponible' %}
+                    <h3 class="font-light px-3 py-2 text-sm my-2 mx-3 w-max" style="background-color: #F6F7F9;">{{ object.get_salary_range }}</h3>
+                
+                {% endif %}
 
-                <h3 class="mt-8 mb-1 text-lg font-bold">Detalles del Trabajo</h3>
+                {% if object.sponsor_relocation %}
+                    <h3 class="font-light px-3 py-2 text-sm my-2 mx-3 w-max" style="background-color: #F6F7F9;">Patrocinio de Relocación</h3>
                 
-                
-                
-                <h3 class="mt-8 mb-1 text-lg font-bold">Como aplicar</h3>
-                
-                {{ object.how_to_apply | safe }}
-                
+                {% endif %}
             </div>
-            <div class="w-2/5 border rounded-md ">
-
-            </div>
+            
+        </div>
+        {% if object.how_to_apply %}
+        <div class="my-2">
+            <h3 class="mt-8 mb-1 text-lg font-bold">Como aplicar</h3>
+            
+            {{ object.how_to_apply | safe }}
+        </div>
+        {% endif %}
+        <div class="mt-6">
+            <h3 class="text-lg font-bold">Descripción</h3>
+            {{ object.description | safe }}
         </div>
     </div>
-    <div class="md:w-1/3 ml-4 py-6 px-4" style="background-color: white;">
-        sidebar content
+    <div class="md:w-1/3 ml-4 " >
+        <div class="sm:my-8 md:my-0 py-6 px-4 max-h-80" style="background-color: white; height: max-content;">
+            <h1 class="mb-1 text-lg font-bold">Sobre {{ object.company }}</h1>
+            {% if object.company.company_url %}
+                <h4 class="font-bold mt-4">Website</h4>
+                <a class="mt-1" href="{{ object.company.company_url }}">{{ object.company.company_url }}</a>
+            {% endif %}
+
+            <h4 class="font-bold mt-4">Lugar</h4>
+            <p class="mt-1">{% translate object.company.country.name %}</p>
+
+            <h4 class="font-bold mt-4">Tamaño de la compañía</h4>
+            <p class="mt-1 mb-4">{{object.company.company_size }}</p>
+        </div>
+
+        {% if other_jobs %}
+        <div class="sm:my-4 py-6 px-4 max-h-80" style="background-color: white; height: max-content;">
+            <h1 class="mb-1 text-lg font-bold">Otros Trabajos en {{ object.company }}</h1>
+            
+            {% for job in other_jobs %}
+                <h4 class="font-bold mt-4">{{ job.title }}</h4>
+                <p class="mt-1 mb-4">{{ job.created | naturaltime }}</p>
+            {% endfor %}
+        </div>
+        {% endif %}
     </div>
 </di>
 
