--- a/feline/templates/account/base.html
+++ b/feline/templates/account/base.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 <div class="row">
-  <div class="mt-16 sm:mt-0 py-8 px-8 mx-auto max-w-md center" style="background-color: white;">
+  <div class="mt-16 border border-gray-200 rounded-md sm:mt-0 py-8 px-8 mx-auto max-w-md center" style="background-color: white;">
     {% block inner %}{% endblock %}
   </div>
 </div>
