--- a/feline/templates/base.html
+++ b/feline/templates/base.html
@@ -69,7 +69,7 @@
               </li>
               <li class="ml-6">
                 {# URL provided by django-allauth/account/urls.py #}
-                <a id="sign-up-link" style="background-color: #F78C2C; color: white;" class="py-2 px-4 rounded" href="{% url 'account_signup' %}">Registrate</a>
+                <a id="sign-up-link" style="background-color: #F78C2C; color: white;" class="py-2 px-4 rounded font-bold" href="{% url 'account_signup' %}">Registrate</a>
               </li>
             {% endif %}
           </ul>
