--- a/feline/templates/jobposts/jobpost_detail.html
+++ b/feline/templates/jobposts/jobpost_detail.html
@@ -19,7 +19,7 @@
 
 {% block content %}
 <div class="flex flex-col sm:mx md:flex-row justify-start">
-    <div class="w-full -auto md:w-2/3 py-6 px-4 mb-4" style="background-color: white;">
+    <div class="w-full -auto md:w-2/3 py-6 px-4 mb-4 border border-gray-200 rounded-md" style="background-color: white;">
         <div class="flex justify-start pb-6 border-b border-b-gray-300">
             <img class="w-16 h-16 rounded-sm border-solid border-gray-200 border6" src="{{ object.company.logo.url }}">
 
@@ -68,7 +68,7 @@
         </div>
     </div>
     <div class="md:w-1/3 ml-4 " >
-        <div class="sm:my-8 md:my-0 py-6 px-4 max-h-80" style="background-color: white; height: max-content;">
+        <div class="sm:my-8 md:my-0 py-6 px-4 max-h-80 border border-gray-200 rounded-md" style="background-color: white; height: max-content;">
             <h1 class="mb-1 text-lg font-bold">Sobre {{ object.company }}</h1>
             {% if object.company.company_url %}
                 <h4 class="font-bold mt-4">Website</h4>
@@ -83,7 +83,7 @@
         </div>
 
         {% if other_jobs %}
-        <div class="sm:my-4 py-6 px-4 max-h-80" style="background-color: white; height: max-content;">
+        <div class="sm:my-4 py-6 px-4 max-h-80 border border-gray-200 rounded-md" style="background-color: white; height: max-content;">
             <h1 class="mb-1 text-lg font-bold">Otros Trabajos en {{ object.company }}</h1>
             
             {% for job in other_jobs %}
