Translate to spanish basic emails templates

--- a/feline/static/css/project.css
+++ b/feline/static/css/project.css
@@ -58,3 +58,7 @@ form label {
 .login-btn-facebook {
   background-color: #1A76F2;
   color: white; }
+
+a {
+  font-weight: 700;
+  color: #F78C2C; }
