--- a/feline/templates/account/signup.html
+++ b/feline/templates/account/signup.html
@@ -8,7 +8,7 @@
 {% block inner %}
 <h1 class="text-2xl text-center">{% translate "Registrate" %}</h1>
 
-<p>{% blocktranslate %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktranslate %}</p>
+<p>{% blocktranslate %}Ya tienes una cuenta? Entonces por favor <a style="color: #F78C2C;" href="{{ login_url }}">Inicia sesión</a>.{% endblocktranslate %}</p>
 
 <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
