Translation of the templates to spanish

--- a/feline/templates/account/password_change.html
+++ b/feline/templates/account/password_change.html
@@ -3,14 +3,14 @@
 {% load i18n %}
 {% load crispy_forms_tags %}
 
-{% block head_title %}{% translate "Change Password" %}{% endblock %}
+{% block head_title %}{% translate "Cambiar Contraseña" %}{% endblock %}
 
 {% block inner %}
-    <h1>{% translate "Change Password" %}</h1>
+    <h1>{% translate "Cambiar Contraseña" %}</h1>
 
     <form method="POST" action="{% url 'account_change_password' %}" class="password_change">
         {% csrf_token %}
         {{ form|crispy }}
-        <button class="btn btn-primary" type="submit" name="action">{% translate "Change Password" %}</button>
+        <button style="background-color: #F78C2C; color: white;" class="py-2 px-4 rounded" type="submit" name="action">{% translate "Cambiar Contraseña" %}</button>
     </form>
 {% endblock %}
