--- a/feline/templates/account/password_set.html
+++ b/feline/templates/account/password_set.html
@@ -3,14 +3,14 @@
 {% load i18n %}
 {% load crispy_forms_tags %}
 
-{% block head_title %}{% translate "Set Password" %}{% endblock %}
+{% block head_title %}{% translate "Asignar Contraseña" %}{% endblock %}
 
 {% block inner %}
-    <h1>{% translate "Set Password" %}</h1>
+    <h1>{% translate "Asignar Contraseña" %}</h1>
 
     <form method="POST" action="{% url 'account_set_password' %}" class="password_set">
         {% csrf_token %}
         {{ form|crispy }}
-        <input class="btn btn-primary" type="submit" name="action" value="{% translate 'Set Password' %}"/>
+        <input style="background-color: #F78C2C; color: white;" class="py-2 px-4 rounded" type="submit" name="action" value="{% translate 'Asignar Contraseña' %}"/>
     </form>
 {% endblock %}
