--- a/feline/templates/account/signup.html
+++ b/feline/templates/account/signup.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% load crispy_forms_tags %}
 
-{% block head_title %}{% translate "Signup" %}{% endblock %}
+{% block head_title %}{% translate "Registrarse" %}{% endblock %}
 
 {% block inner %}
 <h1 class="text-2xl text-center">{% translate "Registrate" %}</h1>
