--- a/feline/templates/account/signup_closed.html
+++ b/feline/templates/account/signup_closed.html
@@ -2,10 +2,10 @@
 
 {% load i18n %}
 
-{% block head_title %}{% translate "Sign Up Closed" %}{% endblock %}
+{% block head_title %}{% translate "Registro Cerrado" %}{% endblock %}
 
 {% block inner %}
-<h1>{% translate "Sign Up Closed" %}</h1>
+<h1>{% translate "Registro Cerrado" %}</h1>
 
-<p>{% translate "We are sorry, but the sign up is currently closed." %}</p>
+<p>{% translate "Lo sentimos, pero el registro esta actualmente cerrado." %}</p>
 {% endblock %}
