--- a/feline/templates/account/logout.html
+++ b/feline/templates/account/logout.html
@@ -14,6 +14,6 @@
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
   {% endif %}
-  <button class="btn btn-danger" type="submit">{% translate 'Sign Out' %}</button>
+  <button   style="background-color: #F78C2C; color: white;" class="py-2 px-4 rounded" type="submit">{% translate 'Sign Out' %}</button>
 </form>
 {% endblock %}
