--- a/feline/templates/account/password_reset.html
+++ b/feline/templates/account/password_reset.html
@@ -4,22 +4,22 @@
 {% load account %}
 {% load crispy_forms_tags %}
 
-{% block head_title %}{% translate "Password Reset" %}{% endblock %}
+{% block head_title %}{% translate "Cambio de Contraseña" %}{% endblock %}
 
 {% block inner %}
 
-    <h1>{% translate "Password Reset" %}</h1>
+    <h1>{% translate "Restablecimiento de contraseña" %}</h1>
     {% if user.is_authenticated %}
     {% include "account/snippets/already_logged_in.html" %}
     {% endif %}
 
-    <p>{% translate "Forgotten your password? Enter your e-mail address below, and we'll send you an e-mail allowing you to reset it." %}</p>
+    <p>{% translate "Olvidaste tu contraseña? Introduce tu dirección de correo aquí debajo, y te enviaremos un email para que puedas cambiarla." %}</p>
 
     <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
         {{ form|crispy }}
-        <input class="btn btn-primary" type="submit" value="{% translate 'Reset My Password' %}" />
+        <input style="background-color: #F78C2C; color: white;" class="py-2 px-4 rounded" type="submit" value="{% translate 'Cambiar mi Contraseña' %}" />
     </form>
 
-    <p>{% blocktranslate %}Please contact us if you have any trouble resetting your password.{% endblocktranslate %}</p>
+    <p>{% blocktranslate %}Por favor contactanos si tienes algun problem restableciendo tu contraseña.{% endblocktranslate %}</p>
 {% endblock %}
