--- a/feline/templates/account/password_reset_from_key.html
+++ b/feline/templates/account/password_reset_from_key.html
@@ -2,14 +2,14 @@
 
 {% load i18n %}
 {% load crispy_forms_tags %}
-{% block head_title %}{% translate "Change Password" %}{% endblock %}
+{% block head_title %}{% translate "Cambiar Contraseña" %}{% endblock %}
 
 {% block inner %}
-    <h1>{% if token_fail %}{% translate "Bad Token" %}{% else %}{% translate "Change Password" %}{% endif %}</h1>
+    <h1>{% if token_fail %}{% translate "Token Erroneo" %}{% else %}{% translate "Cambio de Contraseña" %}{% endif %}</h1>
 
     {% if token_fail %}
         {% url 'account_reset_password' as passwd_reset_url %}
-        <p>{% blocktranslate %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktranslate %}</p>
+        <p>{% blocktranslate %}El enlace para cambiar la contraseña era invalido, posiblemente porque ya ha sido utilizado.  Por favor solicita un <a href="{{ passwd_reset_url }}">nuevo enlace para cambiar la contraseña</a>.{% endblocktranslate %}</p>
     {% else %}
         {% if form %}
             <form method="POST" action=".">
@@ -18,7 +18,7 @@
                 <input class="btn btn-primary" type="submit" name="action" value="{% translate 'change password' %}"/>
             </form>
         {% else %}
-            <p>{% translate 'Your password is now changed.' %}</p>
+            <p>{% translate 'Tu contraseña ha sido cambiada.' %}</p>
         {% endif %}
     {% endif %}
 {% endblock %}
