--- a/feline/templates/account/password_reset_from_key_done.html
+++ b/feline/templates/account/password_reset_from_key_done.html
@@ -1,9 +1,9 @@
 {% extends "account/base.html" %}
 
 {% load i18n %}
-{% block head_title %}{% translate "Change Password" %}{% endblock %}
+{% block head_title %}{% translate "Cambiar Contraseña" %}{% endblock %}
 
 {% block inner %}
-    <h1>{% translate "Change Password" %}</h1>
-    <p>{% translate 'Your password is now changed.' %}</p>
+    <h1>{% translate "Cambiar Contraseña" %}</h1>
+    <p>{% translate 'Tu contraseña ha sido cambiada.' %}</p>
 {% endblock %}
