--- a/feline/templates/base.html
+++ b/feline/templates/base.html
@@ -41,31 +41,31 @@
     <div class="" style="background-color: #fff;">
       {% include "menu/off-canvas.html" %}
       <div></div>
-      <nav class="hidden invisible sm:visible sm:flex justify-start sm:justify-between h-20 py-4 px-4 mb-12 container mx-auto">
+      <nav class="hidden invisible sm:visible sm:flex justify-start sm:justify-between h-20 py-4 px-4 mb-12 container mx-auto items-center">
         <a class="logo" href="{% url 'home' %}"><img class="h-8" src="{% static 'images/website-logo.svg' %}"></a>
 
         <div class="" id="navbarSupportedContent">
           <ul class="flex">
             <li class="active">
-              <a class="gray-900 font-bold" href="{% url 'home' %}">Empleos <span class="sr-only">(current)</span></a>
+              <a class="text-gray-900 font-bold" href="{% url 'home' %}">Empleos <span class="sr-only">(current)</span></a>
             </li>
             
             {% if request.user.is_authenticated %}
               <li class="ml-6">
                 {# URL provided by django-allauth/account/urls.py #}
-                <a class="gray-900 font-bold" href="{% url 'users:detail' request.user.username  %}">Perfil</a>
+                <a class="text-gray-900 font-bold" href="{% url 'users:detail' request.user.username  %}">Perfil</a>
               </li>
               <li class="ml-6">
                 {# URL provided by django-allauth/account/urls.py #}
-                <a class="gray-900 font-bold" href="{% url 'account_logout' %}">Salir</a>
+                <a class="text-gray-900 font-bold" href="{% url 'account_logout' %}">Salir</a>
               </li>
               <li class="ml-6">
-                <a class="gray-900 font-bold" href="{% url 'create' %}">Nueva Posición</a>
+                <a class="text-gray-900 font-bold" href="{% url 'create' %}">Nueva Posición</a>
               </li>
             {% else %}    
               <li class="ml-6">
                 {# URL provided by django-allauth/account/urls.py #}
-                <a id="log-in-link" style="border-color: #F78C2C; color: #F78C2C;" class="gray-900 py-1.5 px-3 border-2 rounded font-bold" href="{% url 'account_login' %}">Iniciar Sesión</a>
+                <a id="log-in-link" style="border-color: #F78C2C; color: #F78C2C;" class="text-gray-900 py-1.5 px-3 border-2 rounded font-bold" href="{% url 'account_login' %}">Iniciar Sesión</a>
               </li>
               <li class="ml-6">
                 {# URL provided by django-allauth/account/urls.py #}
@@ -83,6 +83,34 @@
       {% if messages %}
           {% for message in messages %}
               <div class="alert {% if message.tags %}alert-{{ message.tags }}{% endif %}">{{ message }}<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button></div>
+
+              <!-- This example requires Tailwind CSS v2.0+ -->
+              <div class="bg-indigo-600">
+                <div class="max-w-7xl mx-auto py-3 px-3 sm:px-6 lg:px-8">
+                  <div class="flex items-center justify-between flex-wrap">
+                    <div class="w-0 flex-1 flex items-center">
+                      <span class="flex p-2 rounded-lg bg-indigo-800">
+                        <!-- Heroicon name: outline/speakerphone -->
+                        <svg class="h-6 w-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 5.882V19.24a1.76 1.76 0 01-3.417.592l-2.147-6.15M18 13a3 3 0 100-6M5.436 13.683A4.001 4.001 0 017 6h1.832c4.1 0 7.625-1.234 9.168-3v14c-1.543-1.766-5.067-3-9.168-3H7a3.988 3.988 0 01-1.564-.317z" />
+                        </svg>
+                      </span>
+                      <p class="ml-3 font-medium text-white truncate">
+                        <span>{{ message }}</span>
+                      </p>
+                    </div>
+                    <div class="order-2 flex-shrink-0 sm:order-3 sm:ml-3">
+                      <button type="button" class="-mr-1 flex p-2 rounded-md hover:bg-indigo-500 focus:outline-none focus:ring-2 focus:ring-white sm:-mr-2">
+                        <span class="sr-only">Dismiss</span>
+                        <!-- Heroicon name: outline/x -->
+                        <svg class="h-6 w-6 text-white" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
+                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
+                        </svg>
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
           {% endfor %}
       {% endif %}
 
