--- a/feline/templates/menu/off-canvas.html
+++ b/feline/templates/menu/off-canvas.html
@@ -58,8 +58,7 @@
                 <div class="ml-10 relative flex items-baseline">
                 <a
                     href="{% url 'create' %}"
-                    class="text-sm font-bold text-gray-900 hover:text-gray-700"
-                    >Nueva Posición</a>
+                    style="background-color: #F78C2C; color: white;" class="py-2 px-4 rounded font-bold">Crear Posición</a>
               
               
             {% else %}  
@@ -156,6 +155,10 @@
                   class="mt-4 block font-bold text-gray-900 hover:text-gray-700"
                   >Salir</a
                 >
+                <a
+                    href="{% url 'create' %}"
+                    style="background-color: #F78C2C; color: white;" class="block mt-4 py-2 px-4 rounded font-bold">Crear Posición</a>
+              
                 {% else %}
                 <div class="py-4">
                     <a
