--- a/feline/static/sass/project.scss
+++ b/feline/static/sass/project.scss
@@ -101,3 +101,46 @@ a {
   font-weight: 700;
   color: #F78C2C;
 }
+
+.search-bar input {
+  width: 100%;
+  margin-bottom: 16px;
+  font-weight: 500;
+  color: black;
+}
+
+@media (min-width: 640px) {
+  .search-bar input[type=submit] {
+    width: 140px;
+  }
+
+  .search-bar input[type=text] {
+    width: calc(100%-156px);
+    background-color: #F5F5F5;
+    height: 56px;
+    font-size: 20px;
+    
+  }
+}
+
+form.contact-form input[type=text] {
+  width: 100%;
+  margin-top: 16px;
+  background-color: #f5f5f5;
+}
+
+@media (min-width: 1024px) {
+    body .companies-list{
+      width: calc(66.666667%-16px);
+    }
+
+    body .newsletter {
+      height: max-content;
+      margin-left: 16px;
+    }
+
+    form.contact-form input[type=text] {
+      height: 56px;
+      font-size: 20px;
+    }
+}
