--- a/feline/templates/jobposts/jobpost_detail.html
+++ b/feline/templates/jobposts/jobpost_detail.html
@@ -4,7 +4,7 @@
 {% block title %} Hiempleos.com - {{ object.title }} {% endblock title %}
 
 {% block notification_bar %}
-{% if object.company.user == request.user %}
+<!-- {% if object.company.user == request.user %}
 <div class="items-center bg-gray-100">
     <div class="container mx-auto flex justify-end">
         <div class="ml-6 sm:ml-0">
@@ -12,7 +12,7 @@
         </div>
     </div>
 </div>
-{% endif %}
+{% endif %} -->
 
 {% endblock notification_bar %}
 
