--- a/feline/static/css/project.css
+++ b/feline/static/css/project.css
@@ -67,7 +67,19 @@ a {
   width: 100%;
   margin-bottom: 16px;
   font-weight: 500;
-  color: black; }
+  color: rgba(0, 0, 0, 0.75);
+  background-color: #f5f5f5;
+  border-color: #E3E7EF; }
+  .search-bar input::-webkit-input-placeholder {
+    color: rgba(0, 0, 0, 0.75); }
+  .search-bar input::-moz-placeholder {
+    color: rgba(0, 0, 0, 0.75); }
+  .search-bar input:-ms-input-placeholder {
+    color: rgba(0, 0, 0, 0.75); }
+  .search-bar input::-ms-input-placeholder {
+    color: rgba(0, 0, 0, 0.75); }
+  .search-bar input::placeholder {
+    color: rgba(0, 0, 0, 0.75); }
 
 @media (min-width: 640px) {
   .search-bar input[type=submit] {
@@ -76,7 +88,17 @@ a {
     width: calc(100%-156px);
     background-color: #F5F5F5;
     height: 56px;
-    font-size: 20px; } }
+    font-size: 20px; }
+  .search-bar input[type=text].keyword {
+    width: calc(100%-376px); }
+  .search-bar .category-field {
+    height: 56px; } }
+
+.search-bar .category-field {
+  font-weight: 500;
+  color: rgba(0, 0, 0, 0.75);
+  background-color: #f5f5f5;
+  border-color: #E3E7EF; }
 
 form.contact-form input[type=text] {
   width: 100%;
