--- a/feline/static/sass/project.scss
+++ b/feline/static/sass/project.scss
@@ -106,7 +106,13 @@ a {
   width: 100%;
   margin-bottom: 16px;
   font-weight: 500;
-  color: black;
+  color: rgba(0, 0, 0, 0.75);
+  background-color: #f5f5f5;
+  border-color: #E3E7EF;
+
+  &::placeholder {
+    color: rgba(0, 0, 0, 0.75);
+  }
 }
 
 @media (min-width: 640px) {
@@ -121,6 +127,21 @@ a {
     font-size: 20px;
     
   }
+
+  .search-bar input[type=text].keyword {
+    width: calc(100%-376px);
+  }
+
+  .search-bar .category-field {
+    height: 56px;
+  }
+}
+
+.search-bar .category-field {
+  font-weight: 500;
+  color: rgba(0, 0, 0, 0.75);
+  background-color: #f5f5f5;
+  border-color: #E3E7EF;
 }
 
 form.contact-form input[type=text] {
