--- a/feline/templates/jobposts/jobpost_detail.html
+++ b/feline/templates/jobposts/jobpost_detail.html
@@ -4,8 +4,8 @@
 {% block title %} Hiempleos.com - {{ object.title }} {% endblock title %}
 
 {% block notification_bar %}
-<!-- {% if object.company.user == request.user %}
-<div class="items-center bg-gray-100">
+{% if object.company.user == request.user %}
+<!-- <div class="items-center bg-gray-100">
     <div class="container mx-auto flex justify-end">
         <div class="ml-6 sm:ml-0">
             <a class="whitespace-nowrap inline-flex rounded-md py-2 px-3 text-base font-semibold uppercase text-blue-500 hover:bg-opacity-90" href="{% url 'jobpost-edit' object.slug %}">Editar Empleo</a>
