--- a/feline/templates/jobposts/jobpost_list.html
+++ b/feline/templates/jobposts/jobpost_list.html
@@ -24,52 +24,80 @@
     </div>
 {% endif %}
 
-{% for jobpost in object_list %}
-    <div class="{% if forloop.first %}mt-8 sm:mt-0 {% endif %}py-6 px-4 rounded-lg border mb-2 flex" style="background-color: white;">
-        <div class="w-16 mr-6">
-            <img  class="border6" src="{{ jobpost.company.logo.url}}">
-        </div>
-        <div class="sm:relative sm:-top-1.5">
-            <h3 class="text-xl"><a class="text-black hover:text-yellow-600" href="{{ jobpost.get_absolute_url }}">{{ jobpost.title }}</a></h3>
-            <p class="text-sm">{{ jobpost.company }} - {{ jobpost.location.name }}</p>
-            <div class="flex justify-start">
-                <div class="font-light px-3 py-1 text-sm my-2 mr-3 w-max" style="background-color: #F6F7F9;">{{ jobpost.job_type }}</div>
-                {% if object.is_remote %} 
-                <div class="font-light px-3 py-1 text-sm my-2 mx-3 w-max" style="background-color: #F6F7F9;">Remoto</div>
-                {% endif %} 
-                
+<div class="lg:flex lg:container lg:mx-auto">
+
+    <div class="companies-list mx-4 mt-6 lg:mx-auto lg:w-2/3">
+        {% for jobpost in object_list %}
+        <div class="w-full py-8 px-6 bg-white rounded mb-4 sm:container sm:mx-auto" data-company-url="{{ company.get_absolute_url }}">
+            <div class="sm:flex sm:clear-both">
+                {% if jobpost.company.logo %}
+                <img class="w-10 h-10 sm:w-20 sm:h-20 rounded-full" src="{{ jobpost.company.logo.url }}"/>
+                {% else %}
+                <img class="w-10 h-10 sm:w-20 sm:h-20 rounded-full" src="{% static 'images/icons/no-logo.svg' %}"/>
+                {% endif %}
+                <div class="sm:ml-6">
+                    <h3 class="text-gray-700 mt-2">
+                        <a class="text-gray-700 font-bold text-xl" href="{{ jobpost.get_absolute_url }}" >{{ jobpost.title }}</a>
+                    </h3>
+                    <p class="text-gray-700 mt-2">{{ jobpost.company }}</p>
+                    <div class="flex flex-wrap">
+                        <div class="font-light px-3 py-1 text-xs my-2 w-max" style="background-color: #F6F7F9;">{{ jobpost.job_type }}</div>
+                        <div class="font-light px-3 py-1 text-xs my-2 mr-3 w-max" style="background-color: #F6F7F9;">{{ jobpost.location.name }}</div>
+                        {% if object.is_remote %} 
+                        <div class="font-light px-3 py-1 text-xs my-2 mr-3 w-max" style="background-color: #F6F7F9;">Remoto</div>
+                {% endif %}
+                        
+                    </div>
+                </div>
             </div>
+            
         </div>
 
+        {% if page_obj.has_other_pages %}
+            <div class="mt-12">
+                <span class="current mr-12">
+                    Pagina {{ page_obj.number }} de {{ page_obj.paginator.num_pages }} [ {{ page_obj.paginator.count }} trabajos]
+                </span>
+
+                <span class="step-links">
+                    {% if page_obj.has_previous %}
+                        <a class="mx4 rounded-lg border py-1 px-3" href="?page=1">&laquo; Primer</a>
+                        <a class="mx4 rounded-lg border py-1 px-3" href="?page={{ page_obj.previous_page_number }}">Anterior</a>
+                    {% endif %}
+            
+                
+            
+                    {% if page_obj.has_next %}
+                        <a class="mx4 rounded-lg border py-1 px-3" href="?page={{ page_obj.next_page_number }}">Siguiente</a>
+                        <a class="mx4 rounded-lg border py-1 px-3" href="?page={{ page_obj.paginator.num_pages }}">Ultima Pagina &raquo;</a>
+                    {% endif %}
+                </span>
+            </div>
+        {% endif %}
+
+
+        {% empty %}
+            <div class="mx-4 sm:mx-auto sm:container">
+                <p class="text-center">No tenemos trabajos con ese estos criterios</p>
+            </div>
+            
+        {% endfor %}
+        
     </div>
 
-    {% if page_obj.has_other_pages %}
-    <div class="mt-12">
-        <span class="current mr-12">
-            Pagina {{ page_obj.number }} de {{ page_obj.paginator.num_pages }} [ {{ page_obj.paginator.count }} trabajos]
-        </span>
+    <div class="newsletter py-8 px-6 mx-4 bg-white rounded mb-4 lg:mx-auto lg:w-1/3 lg:mt-6">
+        <img class="w-10 h-10 sm:w-20 sm:h-20 rounded-full" src="{% static 'images/icons/no-logo.svg' %}"/>
+        <h3 class="text-gray-700 font-bold text-xl mt-4">Lista de Correo Semanal</h3>
+        <p class="mt-4">Unete a nuestra lista y te mantendremos informado cuando aparezcan los mejores trabajos nuevos en Republica Dominicana.</p>
 
-        <span class="step-links">
-            {% if page_obj.has_previous %}
-                <a class="mx4 rounded-lg border py-1 px-3" href="?page=1">&laquo; Primer</a>
-                <a class="mx4 rounded-lg border py-1 px-3" href="?page={{ page_obj.previous_page_number }}">Anterior</a>
-            {% endif %}
-    
-          
-    
-            {% if page_obj.has_next %}
-                <a class="mx4 rounded-lg border py-1 px-3" href="?page={{ page_obj.next_page_number }}">Siguiente</a>
-                <a class="mx4 rounded-lg border py-1 px-3" href="?page={{ page_obj.paginator.num_pages }}">Ultima Pagina &raquo;</a>
-            {% endif %}
-        </span>
-    </div>
-    {% endif %}
+        <form class="contact-form flex flex-col items-center">
+            {{ contact_form.email }}
+            <input class="w-full mt-4 py-2 px-4 text-white rounded font-bold sm:h-14 sm:text-2xl" style="margin-bottom: 32px; background-color: #262626; margin-top: 1rem;" type='submit' value="Subscribirse">
+        </form>
 
-{% empty %}
-    <div class="mx-4 sm:mx-auto sm:container">
-        <p class="text-center">No tenemos trabajos con esos criterios</p>
     </div>
-    
-{% endfor %}
+
+</div>
+
 
 {% endblock body %}
