Add Google analytics to site

--- a/feline/templates/base.html
+++ b/feline/templates/base.html
@@ -30,6 +30,15 @@
 
       <!-- place project specific Javascript in this file -->
       <script defer src="{% static 'js/project.js' %}"></script>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=G-MPPL3J77YY"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-MPPL3J77YY');
+      </script>
 
     {% endblock javascript %}
 
