Update generic templates

--- a/feline/templates/base.html
+++ b/feline/templates/base.html
@@ -91,7 +91,7 @@
     </div>
 
     {% block body %}
-    <div class="sm:container sm:mx-auto mx-4 mb-16">
+    <div class="sm:container sm:mx-auto mx-4 mb-16 mt-6">
 
       {% if messages %}
           {% for message in messages %}
