--- a/feline/templates/jobposts/jobpost_detail.html
+++ b/feline/templates/jobposts/jobpost_detail.html
@@ -11,8 +11,8 @@
             <a class="whitespace-nowrap inline-flex rounded-md py-2 px-3 text-base font-semibold uppercase text-blue-500 hover:bg-opacity-90" href="{% url 'jobpost-edit' object.slug %}">Editar Empleo</a>
         </div>
     </div>
-</div>
-{% endif %} -->
+</div>-->
+{% endif %} 
 
 {% endblock notification_bar %}
 
