--- a/feline/static/sass/project.scss
+++ b/feline/static/sass/project.scss
@@ -137,6 +137,14 @@ a {
   }
 }
 
+@media (min-width: 1536px) {
+
+  .container, .sm\:container, .lg\:container{
+    max-width: 1280px !important;
+  }
+  
+}
+
 .search-bar .category-field {
   font-weight: 500;
   color: rgba(0, 0, 0, 0.75);
