--- a/feline/templates/base.html
+++ b/feline/templates/base.html
@@ -47,10 +47,10 @@
   <body class="w-full" style="background-color: #F2F4F7;">
     {% block notification_bar %}
     {% endblock notification_bar %}
-    <div class="" style="background-color: #fff;">
+    <div class="px-4 md:px-8 w-full" style="background-color: #fff;">
       {% include "menu/off-canvas.html" %}
-      <div></div>
-      <nav class="hidden invisible sm:visible sm:flex justify-start sm:justify-between h-20 py-4 px-4 container mx-auto items-center">
+      
+      <nav class="hidden invisible sm:visible sm:flex justify-start sm:justify-between h-20 py-4 container mx-auto items-center">
         <a class="logo" href="{% url 'home' %}"><img class="h-8" src="{% static 'images/website-logo.svg' %}"></a>
 
         <div class="" id="navbarSupportedContent">
@@ -87,7 +87,6 @@
           </ul>
         </div>
       </nav>
-
     </div>
 
     {% block body %}
